--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/tingle.min.css">
 </head>
 <body>
 
@@ -81,6 +82,7 @@
         </ul>
     </div>
 
+    <script src="js/tingle.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
