--- a/index.html
+++ b/index.html
@@ -36,52 +36,52 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
+            <li class="card" value='1'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='2'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='3'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='4'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='5'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='6'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='7'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='8'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='9'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='10'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='11'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='12'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='13'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='14'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='15'>
                 <i class="fa"></i>
             </li>
-            <li class="card">
+            <li class="card" value='16'>
                 <i class="fa"></i>
             </li>
         </ul>
